2016-09-06	Michel Boaventura <michel.boaventura@gmail.com>

    Finishing autotools conversion